fixed whitespace issue on splash for horizontal width adjust yeah that didnt make sense but just go with it

--- a/ambassador_app/static/css/base.css
+++ b/ambassador_app/static/css/base.css
@@ -1,11 +1,13 @@
 html {
 	height: 100%;
+	width: 100%;
 }
 
 body {
 	color: #102E37;
 	margin: 0;
 	height: 100%;
+	width: 100%;
 }
 
 div#wrapper-outer {
